Enable endpoint to fill explorations
PUT /explorations/ID to answer each question from exploration
